# TradePlatformClaude

./: README.md
.github/workflows/: ci.yml
TradePlatformClaude/: .env.example  .gitignore  config.yaml  pyproject.toml
TradePlatformClaude/.agents/: CLAIMS.md
TradePlatformClaude/.github/workflows/: ci.yml
TradePlatformClaude/agent/: config.py  cycle.py  main.py
TradePlatformClaude/agent/data/: indicators.py  market.py  news.py
TradePlatformClaude/agent/execution/: base.py  paper.py
TradePlatformClaude/agent/llm/: decide.py  prompt.py  schema.py
TradePlatformClaude/agent/risk/: limits.py  validate.py
TradePlatformClaude/agent/state/: store.py
TradePlatformClaude/docs/superpowers/plans/: 2026-05-20-trading-agent.md  2026-05-22-regime-detection.md
TradePlatformClaude/docs/superpowers/specs/: 2026-05-20-trading-agent-design.md  2026-05-22-regime-detection-design.md
TradePlatformClaude/tests/: test_config.py  test_cycle.py  test_decide.py  test_indicators.py  test_integration.py  test_main.py  test_market.py  test_news.py  test_paper.py  test_prompt.py  test_schema.py  test_store.py  test_validate.py
